Repo and services for locations may now work, or at least I understand what they do: html needs to be rendered yet...